--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,3 @@
 <h1>About Bloccit</h1>
 <p>Created by: Me</p>
+<%= button_to "Follow me", "http://www.facebook.com/davidhasselhoff/", method: :get, class:"social-btn btn-primary btn" %></button>
