--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,6 +3,7 @@
   <div class="media">
     <div class="media-body">
       <h4 class="media-heading">
+        <% post.censor if post.id % 5 == 0 %>
         <%= link_to post.title, post %>
       </h4>
     </div>
