--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,11 @@
 <h1>All Posts</h1>
+<% count = 0 %>
 <% @posts.each do |post| %>
   <div class="media">
     <div class="media-body">
       <h4 class="media-heading">
-        <% post.censor if post.id % 5 == 0 %>
+        <% count +=1 %>
+        <% post.censor if count % 5 == 0 %>
         <%= link_to post.title, post %>
       </h4>
     </div>
