--- a/app/views/advertisements/index.html.erb
+++ b/app/views/advertisements/index.html.erb
@@ -1,5 +1,5 @@
-<h1>All Posts</h1>
-<% @posts.each do |advertisement| %>
+<h1>All Ads</h1>
+<% @advertisements.each do |advertisement| %>
   <div class="media">
     <div class="media-body">
       <h4 class="media-heading">
