--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.user-info img {
+    vertical-align:middle;
+    display: inline-block;
+}
+.user-info p {
+    vertical-align:middle;
+    display: inline-block;
+}
+.user-info p span {
+    display: block;
+}
