--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,7 +20,9 @@
   <%= f.label :body %>
   <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
 <% end %>
-
+      <div class="form-group">
+        <%= render partial: "ratings/form", locals: { f: f, topic: @topic, rating: @post.rating } %>
+      </div>
 <div class="form-group">
 <%= render partial: 'labels/form', locals: { f: f, topic: @topic, labels: @post.labels } %>
 </div>
