--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,9 +21,37 @@
   </div>
 </div>
 
-
+<% if @user.posts.count > 0 %>
 <h2>Posts</h2>
 <%= render @user.posts %>
-
+<% else %>
+<p>
+<%= "#{@user.name} has not submitted any posts yet." %>
+</p>
+<% end %>
+<% if @user.comments.count > 0 %>
 <h2>Comments</h2>
 <%= render @user.comments %>
+<% else %>
+<p>
+<%= "#{@user.name} has not submitted any comments yet." %>
+</p>
+<% end %>
+
+<% if @user.favorites.count > 0 %>
+<h2>Faves</h2>
+
+
+<% @user.favorites.each do |favorite| %>
+  <div class="media">
+    <%= render partial: 'favorites/list', locals: { favorite: favorite } %>
+  </div>
+<% end %>
+
+
+
+<% else %>
+<p>
+<%= "#{@user.name} has not submitted any favorites yet." %>
+</p>
+<% end %>
