--- a/app/views/ratings/_display.html.erb
+++ b/app/views/ratings/_display.html.erb
@@ -1,3 +1,3 @@
  <% if rating %>
-   <%= link_to rating.severity, "", class: "btn btn-info" %>
+   <%= link_to rating.severity, "", class: 'btn-xs btn-primary' %>
  <% end %>
