--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -1,6 +1,6 @@
  <%= f.label :rating %>
  <% if rating %>
-     <%= f.select :rating, options_for_select(Rating.severities, Rating.severities[rating.severity]) %>
+     <%= f.select :rating, options_for_select(Rating.severities.keys.to_a, rating.severity) %>
  <% else %>
-     <%= f.select :rating, options_for_select(Rating.severities) %>
+     <%= f.select :rating, Rating.severities.keys.to_a %>
  <% end %>
