--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,8 +1,11 @@
+<div class="row vertical-align">
+<div class="col-md-8">  
 <h1><%= @topic.name %></h1>
-
+</div>
+<div class="col-md-4">
 <%= render partial: "ratings/display", locals: { rating: @topic.rating } %>
-
-
+</div>
+</div>
 
 
 <% if user_is_authorized_for_topics? %>
