--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,7 +3,8 @@
      <small>
        <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
         <% if user_is_authorized_for_comment?(comment) %>
-         | <%= link_to "Delete", [comment.post, comment], method: :delete %>       <% end %>
+         |   <%= link_to "Delete", [comment.post, comment], method: :delete, remote: true %>   
+         <% end %>
      </small>
      <p><%= comment.body %></p>
    </div>
